# nushell-core

./: Cargo.toml  README.md
src/: main.rs
