[package]
authors = ["The Nushell Project Developers"]
default-run = "nu"
description = "A new type of shell"
documentation = "https://www.nushell.sh/book/"
edition = "2018"
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nu"
readme = "README.md"
repository = "https://github.com/nushell/nushell"
rust-version = "1.60"
version = "0.64.0"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
crossterm = "0.23.0"
ctrlc = "3.2.1"
log = "0.4"
miette = "4.5.0"
nu-ansi-term = "0.46.0"
nu-cli = { version = "0.64.0"  }
nu-color-config = { version = "0.64.0"  }
#nu-command = { version = "0.64.0"  }
nu-command = { git = "https://github.com/stormasm/nu-command-core", branch = "main" }
nu-engine = { version = "0.64.0"  }
nu-json = { version = "0.64.0"  }
nu-parser = { version = "0.64.0"  }
nu-path = { version = "0.64.0"  }
nu-plugin = { optional = true, version = "0.64.0"  }
nu-pretty-hex = { version = "0.64.0"  }
nu-protocol = { version = "0.64.0"  }
nu-system = { version = "0.64.0" }
nu-table = { version = "0.64.0"  }
nu-term-grid = { version = "0.64.0"  }
nu-utils = { version = "0.64.0"  }
reedline = { version = "0.7.0", features = ["bashisms", "sqlite"]}
pretty_env_logger = "0.4.0"
rayon = "1.5.1"
is_executable = "1.0.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
signal-hook = { version = "0.3.14", default-features = false }

[dev-dependencies]
nu-test-support = { version = "0.64.0"  }
tempfile = "3.2.0"
assert_cmd = "2.0.2"
pretty_assertions = "1.0.0"
serial_test = "0.5.1"
hamcrest2 = "0.3.0"
rstest = "0.12.0"
itertools = "0.10.3"

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
